--- a/Calc_bmi/src/main/webapp/WEB-INF/web.xml
+++ b/Calc_bmi/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
   </context-param>
   <context-param>
     <param-name>primefaces.THEME</param-name>
-    <param-value>saga</param-value>
+    <param-value>vela</param-value>
 </context-param>
   
   <servlet>
